# bot-sonora-monorepo

./: .env.example  .gitignore  docker-compose.local.yml  docker-compose.yml
backend/: Dockerfile  README.md  bot.py  docker-compose.yml  nginx.conf  pyproject.toml  start.py
backend/app/: context.py  prompts.py
backend/app/actions/: conversation_handler.py
backend/app/api/: __init__.py  chat_api.py  server.py
backend/app/core/: knowledge_base.py  supabase_client.py
backend/app/pipeline/: loggers.py  vision_processor.py
backend/app/services/: database.py  rag.py  tuguia_database.py
backend/app/tools/: bot_tools.py
backend/app/utils/: security.py
frontend/: docker-build.ps1  docker-compose.yml
